--- a/tsTree.css
+++ b/tsTree.css
@@ -3,7 +3,8 @@
     display: inline;;
     float: up;
     width: 25%;
-      margin-bottom: 10px;
+     border-width: 5px;
+    padding: 20px 30px;
 
 }
 
