--- a/tsTree.css
+++ b/tsTree.css
@@ -5,7 +5,7 @@
     width: 25%;
      border-width: 5px;
     padding: 20px 30px;
-     background-color: #808080;
+     
 
 }
 
@@ -35,7 +35,7 @@ li.hamza:hover {
 }
 
 .choosen {
-    background-color: #3498db !important;
+    background-color: #808080; !important;
 }
 
 .page-arrow {
