--- a/tsTree.css
+++ b/tsTree.css
@@ -29,7 +29,16 @@ li.hamza {
     padding: 20px 30px;
     position: relative;
 }
-
+li.hamza1 {
+    float: none;
+    cursor: pointer;
+    background-color: #6AA84F;
+    border-bottom: 1px solid #fff;
+    border-right: 1px solid #fff;
+    color: #fff;
+    padding: 20px 30px;
+    position: relative;
+}
 li.hamza:hover {
     background-color: #3498db;
 }
