--- a/tsTree.css
+++ b/tsTree.css
@@ -22,7 +22,7 @@ ul{
 li.hamza {
     float: none;
     cursor: pointer;
-    background-color: #10567E;
+    background-color: #32292F;
     border-bottom: 1px solid #fff;
     border-right: 1px solid #fff;
     color: #fff;
